# pytmatrixc

./: README.md  meson.build  pyproject.toml
.github/workflows/: release.yml
pytmatrix/: psd.py
pytmatrix/test/: test.py
